tests/instantiating/invalid/instantiating_mask_in_func/bus.fbd
type foo_mask(width=5) mask
	width = width

type foo_func func
	foo foo_mask

main bus
	my_func foo_func
